# weather-currency-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 2e7a391e0c8e_add_users_table.py  a14513afde2b_add_user_country_relationship_and_task_.py  c253b1f2ef9b_add_users_table_for_authentication.py  f2b4e6bd620f_initial_migration.py
app/: main.py
app/core/: config.py  db.py  logger.py
app/jobs/: scheduler.py
app/jobs/one_off/: __init__.py
app/jobs/recurring/: __init__.py
app/jobs/recurring/cities_weather/: README.md  scrape_cities_weather.py
app/jobs/recurring/scrape_countries_cities/: README.md  __init__.py  scrape_countries_cities.py  scraper.py
app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
app/modules/currency/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
app/modules/currency/scripts/: currency.py
app/modules/jobs/: model.py  models.py
app/modules/weather/: __init__.py  model.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/weather/scripts/: weather.py
app/utils/: git_sync.py  idempotency.py  models.py
data/snapshots/scrape_cities_weather/2025-11-28_18-38-42/: weather_india.json  (+1 more)
data/snapshots/scrape_countries_cities/: 2025-11-28_countries_cities.json
jobs/: README.md  registry.py  scheduler.py
jobs/one_off/: __init__.py
jobs/recurring/: __init__.py
tests/: test_currency.py  test_weather.py
(+6 files in other folders)
