[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automated-weather-tracker"
version = "0.1.0"
description = "Automated weather and currency data scraper with FastAPI and APScheduler"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.1",
    "playwright>=1.40.0",
    "gitpython>=3.1.40",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
